work around for space collapse bug

--- a/_auto-breaking.scss
+++ b/_auto-breaking.scss
@@ -2,6 +2,7 @@
 %auto-breaking {
   &::before,
   &::after {
+    display: inline-block;
     content: "\0020"; // Space
     font-size: 0;
   }
